# Workspaces

./: .gitignore  ADD_ITEM_MODAL_APP_LOADING.md  APP_CATALOG_SPOTLIGHT_DISCOVERY_PLAN.md  ARCHITECTURE.md  PLAN.md  package-lock.json  package.json
scripts/: dock_ax_probe.swift
src/: App.css  App.tsx  custom-elements.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/features/add-item/: AddItemModal.tsx  add-item.css
src/features/add-item/components/: AppGrid.tsx  AppTile.tsx  SearchBar.tsx
src/features/add-item/tabs/: ApplicationsTab.tsx  FoldersTab.tsx  LinksTab.tsx
src/features/dock/: DockFeature.tsx  dock.css  types.ts
src/features/dock/components/: Dock.tsx  DockItemButton.tsx  DockTitle.tsx  ErrorToast.tsx
src/features/dock/config/: dockItems.ts
src/features/dock/hooks/: useAppCatalog.ts  useDockEditMode.ts  useDockIcons.ts  useDockItemsStore.ts  useDockLabels.ts  useDockTitle.ts  useDockVisibility.ts  useInstalledAppsCache.ts  useNativeDockMouseTracking.ts
src/features/dock/services/: dockService.ts
src/features/dock/utils/: iconUtils.ts
workspace-dock/: package.json
workspace-dock/src/: App.css  App.tsx
workspace-dock/src-tauri/: tauri.conf.json
workspace-dock/src-tauri/src/: lib.rs  main.rs
